<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="334dp">

        <RelativeLayout
            android:id="@+id/android_lar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#082335"
            android:clipToOutline="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="329dp">


                <View
                    android:id="@+id/rectangle_2"
                    android:layout_width="match_parent"
                    android:layout_height="328dp"
                    android:background="@drawable/rectangle_2"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/races_won_"
                    android:layout_width="153dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/races_won"
                    android:textAppearance="@style/races_won"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.062"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                    app:layout_constraintVertical_bias="0.234" />

                <TextView
                    android:id="@+id/races_won_txt"
                    android:layout_width="153dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/races_won"
                    android:textAppearance="@style/races_won"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.829"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                    app:layout_constraintVertical_bias="0.234" />

                <TextView
                    android:id="@+id/fastest_lap_txt"
                    android:layout_width="153dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/fastest_lap"
                    android:textAppearance="@style/races_won"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.829"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                    app:layout_constraintVertical_bias="0.416" />

                <TextView
                    android:id="@+id/points_txt"
                    android:layout_width="153dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/points"
                    android:textAppearance="@style/races_won"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.829"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                    app:layout_constraintVertical_bias="0.583" />

                <TextView
                    android:id="@+id/nationality_txt"
                    android:layout_width="153dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/nationality"
                    android:textAppearance="@style/nationality"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.829"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                    app:layout_constraintVertical_bias="0.741" />

                <TextView
                    android:id="@+id/team_txt"
                    android:layout_width="153dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/team"
                    android:textAppearance="@style/races_won"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.829"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                    app:layout_constraintVertical_bias="0.916" />

                <TextView
                    android:id="@+id/racer_txt"
                    android:layout_width="280dp"
                    android:layout_height="32dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/racer"
                    android:textAppearance="@style/racer"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.057"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.055" />

                <TextView
                    android:id="@+id/team"
                    android:layout_width="69dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="324dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/team"
                    android:textAppearance="@style/team"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/rectangle_2"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                    app:layout_constraintVertical_bias="0.916" />

                <TextView
                    android:id="@+id/nationality"
                    android:layout_width="137dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="18dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/nationality"
                    android:textAppearance="@style/nationality"
                    app:layout_constraintBottom_toTopOf="@+id/team"
                    app:layout_constraintEnd_toStartOf="@+id/nationality_txt"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/rectangle_2"
                    app:layout_constraintTop_toBottomOf="@+id/fastest_lap"
                    app:layout_constraintVertical_bias="0.752" />

                <TextView
                    android:id="@+id/points_"
                    android:layout_width="88dp"
                    android:layout_height="30dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/points"
                    android:textAppearance="@style/points"
                    app:layout_constraintBottom_toTopOf="@+id/nationality"
                    app:layout_constraintEnd_toStartOf="@+id/points_txt"
                    app:layout_constraintHorizontal_bias="0.142"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fastest_lap"
                    app:layout_constraintVertical_bias="0.54" />

                <TextView
                    android:id="@+id/fastest_lap"
                    android:layout_width="152dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="124dp"
                    android:layout_marginEnd="242dp"
                    android:layout_marginBottom="174dp"
                    android:fontFamily="@font/inter_semibold"
                    android:gravity="top"
                    android:text="@string/fastest_lap"
                    android:textAppearance="@style/fastest_lap"
                    app:layout_constraintBottom_toBottomOf="@+id/rectangle_2"
                    app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/rectangle_2"
                    app:layout_constraintTop_toTopOf="@+id/rectangle_2"
                    app:layout_constraintVertical_bias="1.0" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>